# linux-ctfs

./: .gitattribute  .gitattributes  .gitignore  CONTRIBUTING.md  CONTRIBUTOR_ONBOARDING_GUIDE.md  PR_DESCRIPTION.md  README.md  TROUBLESHOOTING.md  VERIFICATION.md  ctf_setup.sh  verify_token.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  challenge_help.md  config.yml  feature_request.md  ssh_issue.md  terraform_issue.md  verify_issue.md
.github/prompts/: run-ctf-tests.prompt.md
.github/skills/ctf-challenge-creator/: SKILL.md
.github/skills/ctf-testing/: SKILL.md  deploy_and_test.sh  (+1 more)
.github/workflows/: new-issue.yaml  release-setup.yml  shellcheck.yml
aws/: .gitignore  README.md  ctf_setup.sh  destroy.sh  main.tf
azure/: README.md  ctf_setup.sh  main.tf
docs/: AWS_COMMANDS.md  AZURE_COMMANDS.md  GCP_COMMANDS.md
gcp/: README.md  ctf_setup.sh  main.tf
setup/: flags.py  helpers.py  main.py  pyproject.toml  state.py  system.py
setup/challenges/: __init__.py  ch01_hidden_file.py  ch02_file_search.py  ch03_log_analysis.py  ch04_user_investigation.py  ch05_permissions.py  ch06_service_discovery.py  ch07_encoding.py  ch08_ssh_secrets.py  ch09_dns.py  ch10_remote_upload.py  ch11_web_config.py  ch12_network_traffic.py  ch13_cron.py  ch14_process_env.py  ch15_archive.py  ch16_symlinks.py  ch17_history.py  ch18_disk_detective.py
tests/: CHALLENGE_REFERENCE.md  deploy_and_test.sh  run-ctf-tests.prompt.md  test_ctf_challenges.sh
verify/: pyproject.toml
verify/src/verify/: __init__.py  __main__.py  commands.py  state.py
