[project]
name = "linux-ctf-verify"
version = "0.1.0"
description = "Learner verification CLI for the Learn to Cloud Linux CTF."
requires-python = ">=3.13"
dependencies = [
    "pyfiglet>=1.0.2",
    "rich>=13.9.0",
]

[project.scripts]
verify = "verify.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verify"]
